base/01-intern/01-adguardhome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguardhome-service
  namespace: adguardhome
  labels:
    environment: intern
    app: adguardhome
spec:
  selector:
    app: adguardhome
  type: ClusterIP
  ports:
    - targetPort: 3000
      port: 3000
